<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_weight="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/textviewResultCalculation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"

            />


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:divider="@drawable/separator"
        android:dividerPadding="3dp"
        android:showDividers="middle"
        >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonBack"
            android:layout_weight="0.2"
            android:layout_margin="@dimen/allMargin"
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/buttonDrawing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonImage"
            android:layout_weight="0.2"
            android:layout_margin="@dimen/allMargin"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonTheory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTheoryPDF"
            android:layout_weight="0.2"
            android:layout_margin="@dimen/allMargin"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonShare"
            android:layout_weight="0.2"
            android:layout_margin="@dimen/allMargin"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>





</LinearLayout>